spec/fixtures/errors/if-with-non-expression-condition.jsx
var React = require('react');

module.exports = React.createClass({
  render: function () {
    return (
      <div>
        <If condition="true">
          <span>IfBlock</span>
        </If>
      </div>
    );
  }
});
